--- a/jumuiya-tours-wdd330/index.html
+++ b/jumuiya-tours-wdd330/index.html
@@ -384,6 +384,10 @@
                       </p>
                     </div>
                   </form>
+                  <!-- Save Trip button (hooked in main.js) -->
+                  <button id="planner-save-trip" class="btn       btn--primary">
+                    Save Trip
+                  </button>
                 </div>
               </section>
             </div>
@@ -422,6 +426,7 @@
             </section>
           </div>
         </section>
+
       </main>
 
       <!-- ========== FOOTER ========== -->
